Minor styling (fixed uneven mammoth)

--- a/public/styles.css
+++ b/public/styles.css
@@ -119,6 +119,10 @@ img {
     transition-duration: 0.3s;
 }
 
+#mammoth {
+    margin-bottom: 45px;
+}
+
 .list-icon {
     height: 10px;
     width: 10px;
